--- a/README
+++ b/README
@@ -40,43 +40,50 @@ in a temporary directory, grab the fabric file and build out a development h1ds 
 $ cd /tmp
 $ git clone git://code.h1svr.anu.edu.au/h1ds/h1ds.git
 $ cd h1ds
-$ fab dev setup
+$ fab dev initiate
 $ fab dev deploy
 
 the fab setup script should only be run once in order to set up a virtual environment, the deploy script can be run multiple times, and should be run after any changes are made to the code.
 
+now move across to your development environment
 
+$ workon h1ds_development
+$ ./manage.py runcserver --settings=h1ds.settings_development
+
+# you should now be able to use the mdsplus browser, have a look at http://localhost:8000
+# you can use a different port using, e.g.
+$ ./manage.py runcserver 8001 --settings=h1ds.settings_development
+
+# To get background processes working (for summary database, etc) you'll need to have rabbitmq installed
+# currently in ubuntu there seems to be a bug with the default server so you'll need to do 
+$ sudo service rabbitmq-server stop
+and statr a separate server
+# sudo rabbitmq-server
+then, in a new terminal
+$ workon h1ds_development
+$ ./manage.py celeryd -v 2 -B -s celery -E -l INFO --settings=h1ds.settings_development
+
+# the development server is a simple python webserver and shouldn't be used for production.
+
+# the wiki is not set up for the development environment. 
+# you can set up a staging server using apache, which will also setup the wiki
+
+$ fab staging initiate
+$ fab staging update
+
+# you should now see the server at http://localhost (after you install apache, etc) 
+
+# for a production environment (I haven't tested this for a while...)
+$ fab production initiate
+$ fab production update
 
 
 
 ##################################################################################
+notes
 
-These scripts assume you have virtualenv and virtualenvwrapper.
-
-basic install on dave's linux - more extensive instructions will follow:
-
-$ mkvirtualenv --distribute h1ds
-
-we require python 2.X, if you need to specify this explicitly use, e.g.
-$ mkvirtualenv -p python2 --distribute h1ds
-
-or, for development, it can be useful to make sure you aren't relying on any system libraries by using
-$ mkvirtualenv -p python2 --no-site-packages --distribute h1ds
-
-then:
-
-$ cd $VIRTUAL_ENV
-$ git clone git://code.h1svr.anu.edu.au/h1ds/h1ds.git
-(if you're dave, you can do git via ssh: git clone git@code.h1svr.anu.edu.au:h1ds/h1ds.git )
-$ cd h1ds
-$ ./bootstrap.py
 
 # fixtures are generated with, e.g.
 cd $VIRTUAL_ENV/h1ds
 ./manage.py dumpdata h1ds_summary --indent 2 --settings=h1ds.settings_development > data/summarydb.json
-
-## running celery ##
-start rabbitmq server
-then in a separate instance of the same h1ds virtualenv, do
-./manage.py celeryd -v 2 -B -s celery -E -l INFO --settings=h1ds.settings_development
 
