--- a/README
+++ b/README
@@ -40,10 +40,14 @@ in a temporary directory, grab the fabric file and build out a development h1ds 
 $ cd /tmp
 $ git clone git://code.h1svr.anu.edu.au/h1ds/h1ds.git
 $ cd h1ds
+$ cp fabfile.py{.template,}
+# make any edits to fabfile.py 
 $ fab dev initiate
-$ fab dev deploy
+$ cp settings_development.py{.template,}
+# make any edits to settings_development.py
+$ fab dev update
 
-the fab setup script should only be run once in order to set up a virtual environment, the deploy script can be run multiple times, and should be run after any changes are made to the code.
+the fab initiate script should only be run once in order to set up a virtual environment, the deploy script can be run multiple times, and should be run after any changes are made to the code.
 
 now move across to your development environment
 
